# Project_Notifier_Telegram_bot

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: build_and_release.yml
src/notifier_pkg/: __init__.py  notifier.py
src/telegram_notifier_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
