# File: setup.cfg

# This file contains all the metadata about your package.
# It's the modern, declarative way to configure a package,
# making it easier to read and maintain than a setup.py file.

[metadata]
# This is the name that will be used for `pip install`.
# Use a hyphen for the package name on PyPI.
name = telegram-notifier-pkg
version = attr: src.notifier_pkg.__version__
author = attr: src.notifier_pkg.__author__
author_email = attr: src.notifier_pkg.__email__
description = A simple package to send Telegram notifications from Python projects.
# The long_description will be read from your README.md file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/telegram-notifier # Replace with your project's URL
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Communications :: Chat

[options]
# Tell setuptools where to find the actual Python code.
package_dir =
    = src
packages = find:
python_requires = >=3.8

# --- IMPORTANT ---
# This is where you list all the libraries your package depends on.
# When someone runs `pip install .`, pip will automatically install these.
install_requires =
    python-telegram-bot[ext]>=20.0

[options.packages.find]
where = src

